<resources>
    <string name="app_name">Game_2048</string>
    <string name="header">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>

    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now...</string>
    <string name="endless">"Endless" Mode</string>
    <string name="menu">Menu</string>

    <string name="share">Share</string>


    <string name="goto_share">分享至</string>
    <string name="settlement_score">当前分数</string>
    <string name="settlement_continue">继续游戏</string>
    <string name="settlement_share">分享</string>
    <string name="settlement_new_game">重新开始</string>
    <string name="settlement_win">You Win!</string>
    <string name="settlement_game_over">Game Over!</string>

    <string name="menu_title">菜单</string>
    <string name="menu_continue">回到游戏</string>
    <string name="menu_new_game">重新开始</string>
    <string name="menu_share">分享</string>
    <string name="menu_mode">模式</string>

    <string name="mode_title">模式选择</string>

    <array name="mode_list">
        <item>标准版</item>
        <item>朝代版</item>
        <item>恋爱版</item>
        <item>修仙版</item>
    </array>


    <array name="immortal_mode">
        <item>后天</item>
        <item>先天</item>
        <item>金丹</item>
        <item>元婴</item>
        <item>渡劫</item>
        <item>天仙</item>
        <item>金仙</item>
        <item>玄仙</item>
        <item>天神</item>
        <item>神王</item>
        <item>天尊</item>
        <item>鸿蒙掌控者</item>

    </array>
    <array name="dynasty_mode">
        <item>夏朝</item>

        <item>商朝</item>

        <item>周朝</item>

        <item>秦朝</item>

        <item>汉朝</item>

        <item>三国</item>

        <item>晋朝</item>

        <item>隋朝</item>

        <item>唐朝</item>

        <item>宋朝</item>

        <item>金朝</item>

        <item>元朝</item>

        <item>明朝</item>

        <item>清朝</item>

        <item>现代</item>
    </array>
    <array name="love_mode">
        <item>撩妹</item>
        <item>暧昧</item>
        <item>见面</item>
        <item>心动</item>
        <item>牵手</item>
        <item>约会</item>
        <item>交往</item>
        <item>接吻</item>
        <item>嘿咻</item>
        <item>求婚</item>
        <item>结婚</item>
        <item>生子</item>
        <item>生死契阔</item>
        <item>与子成说</item>
    </array>
</resources>
