<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f9f9f0">

    <TextView
        android:id="@+id/game_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/color_7a6c68"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/game_score_panel"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_below="@+id/game_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:background="@drawable/background_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/text_brown"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1518"
            android:textColor="@color/text_white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/game_share"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_below="@+id/game_score_panel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:background="@drawable/background_rectangle"
        android:text="@string/share"
        android:textColor="@color/text_white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/game_new_game"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_below="@+id/game_share"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:background="@drawable/background_rectangle"
        android:text="@string/new_game"
        android:textColor="@color/text_white"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>